batch_first input support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ set(sources ./src/ctc_beam_search_decoder.cpp)
 
 # Source for cpp_demo usage
 set(cpp_demo_sources ./cpp_demo/ctc_decoder_demo.cpp)
+set(cpp_demo_bf_sources ./cpp_demo/ctc_decoder_demo_batch_first.cpp)
 
 ###############################################################################
 ## target definitions for shared library ######################################
@@ -27,9 +28,14 @@ set_property(TARGET ctc_beam_search_decoder PROPERTY POSITION_INDEPENDENT_CODE O
 ## target definitions for example application #################################
 ###############################################################################
 
-add_executable(cpp_demo ${cpp_demo_sources})
+# Include directories for ctc_examples only
 
-# Include directories for ctc_example only
+add_executable(cpp_demo ${cpp_demo_sources})
 target_include_directories(cpp_demo PUBLIC ${CMAKE_SOURCE_DIR})
 target_link_directories(cpp_demo PUBLIC ${CMAKE_SOURCE_DIR})
 target_link_libraries(cpp_demo ctc_beam_search_decoder)
+
+add_executable(cpp_demo_bf ${cpp_demo_bf_sources})
+target_include_directories(cpp_demo_bf PUBLIC ${CMAKE_SOURCE_DIR})
+target_link_directories(cpp_demo_bf PUBLIC ${CMAKE_SOURCE_DIR})
+target_link_libraries(cpp_demo_bf ctc_beam_search_decoder)
